# OpenGL-Ping-Pong

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeOptions.cmake  README.md
CMake/: BuildAppBundle.cmake  BuildGLEW.cmake  BuildSDL2.cmake  Buildcglm.cmake  MakeAppBundle.cmake
Include/: Config.h  Graphics.h  Keyboard.h  Paddle.h  Utility.h
Resources/: default.fs  default.vs
Source/: Game.c  Graphics.c  Keyboard.c  Paddle.c  Utility.c
